# drag-to-recording

./: .gitattributes  .gitignore  AGENTS.md  CHECKPOINT_COMMANDS.md  COPY_TO_EXISTING_REPO.md  GOAL_PROMPT.md  MANIFEST.md  PLAN.md  PROMPT_INDEX.md  README.md  REFERENCES.md  RUNBOOK.md  TASKS.md  agent.md  package_manifest.json  pyproject.toml  requirements.txt
docs/: ACCEPTANCE_CRITERIA.md  ARCHITECTURE.md  CODEX_USAGE_NOTES.md  HIDPI_COORDINATE_NOTES.md  IMPLEMENTATION_DECISIONS.md  MANUAL_TEST_CHECKLIST.md  OS_NOTES.md  QUALITY_BAR.md  SECURITY_AND_PRIVACY.md  TROUBLESHOOTING.md
packaging/: Drag to recording.spec
prompts/: 00_read_first.md  01_models_and_tests.md  02_region_selector.md  03_video_writer.md  04_recorder_engine.md  05_main_gui.md  06_docs_and_readme.md  07_manual_test_debug.md  08_pr_review_hardening.md  09_optional_packaging_future.md  ONE_SHOT_IMPLEMENTATION_PROMPT.md
screen_region_recorder/: __init__.py  icons.py  main.py  models.py  preview_panel.py  recorder.py  selector.py  styles.py  video_writer.py
scripts/: checkpoint.ps1  checkpoint.sh  run_app.ps1  run_app.sh  run_tests.ps1  run_tests.sh  setup_unix.sh  setup_windows.ps1
si-powder-bed-nitridation/: README.md  agents.md  plan.md
tests/: test_gui_helpers.py  test_models.py  test_project_imports.py  test_recorder.py  test_video_writer.py
