[project]
name = "screen-region-recorder"
version = "0.0.0"
description = "Python desktop app scaffold for selecting and recording a screen region to MP4."
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "mss>=10.0",
  "numpy>=1.26",
  "imageio-ffmpeg>=0.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
